k3s/k3s-nginx-file-server.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: nginx
  labels:
    app: nginx

---
apiVersion: v1
kind: Service
metadata:
  namespace: nginx
  name: nginx
  labels:
    app: nginx
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: nginx

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: nginx
  name: nginx
  labels:
    app: nginx
spec:
  replicas: 1
  serviceName: nginx
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:1.22.0-alpine
          volumeMounts:
            - mountPath: /etc/nginx/nginx.conf
              name: nginx-config 
              subPath: nginx.conf
            - mountPath: /www-data
              name: data-path
      volumes:
        - name: data-path
          hostPath:
            path: /www-data
        - name: nginx-config
          configMap:
            name: nginx-config
            items:
              - key: nginx.conf
                path: nginx.conf

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: nginx
  name: nginx-ingress
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
    - host: file.bgton.cn
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 80
